06/23 - Security Patch GetRatePHP.class RateDialog.class 위의 2개의 클래스는 서버주소 보안문제로 deprecated되었습니다.

--- a/app/src/main/res/layout/rate_item_card_small.xml
+++ b/app/src/main/res/layout/rate_item_card_small.xml
@@ -85,6 +85,7 @@
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_gravity="center_vertical|center_horizontal"
+              android:textSize="30dp"
               app:fa_icon="fa-user"
               android:layout_weight="1"
               android:layout_marginRight="3dp"></com.gms.gms_meal.lib.FontAwesomeText>
