--- a/app/src/main/res/layout/l_opensource.xml
+++ b/app/src/main/res/layout/l_opensource.xml
@@ -327,7 +327,50 @@
         </RelativeLayout>
       </android.support.v7.widget.CardView>
     </com.andexert.library.RippleView>
+    <com.andexert.library.RippleView
+        android:id="@+id/GoogleMaterialIcon_license"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
 
+        android:layout_margin="10dp"
+        android:background="@null"
+        app:rv_zoom="true">
 
+      <android.support.v7.widget.CardView
+          android:layout_width="match_parent"
+          android:layout_height="match_parent"
+          app:cardBackgroundColor="#ffd700"
+          app:cardCornerRadius="5dp"
+          app:cardElevation="7dp"
+          app:cardPreventCornerOverlap="false"
+          app:contentPadding="0dp">
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+
+            android:background="@null">
+
+          <TextView
+              android:id="@+id/TextView07"
+              android:layout_width="wrap_content"
+              android:layout_height="wrap_content"
+              android:layout_alignParentTop="true"
+              android:layout_centerHorizontal="true"
+              android:layout_margin="10dp"
+              android:gravity="center_horizontal"
+              android:text="GoogleMaterialIcon"/>
+
+          <TextView
+
+              android:layout_width="wrap_content"
+              android:layout_height="wrap_content"
+              android:layout_alignParentLeft="true"
+              android:layout_alignParentRight="true"
+              android:layout_below="@+id/TextView07"
+              android:layout_margin="10dp"
+              android:text="@string/GoogleMaterialIcon"/>
+        </RelativeLayout>
+      </android.support.v7.widget.CardView>
+    </com.andexert.library.RippleView>
   </LinearLayout>
 </ScrollView>
