06/23 - Security Patch GetRatePHP.class RateDialog.class

--- a/app/src/main/res/layout/meal_item_card_big.xml
+++ b/app/src/main/res/layout/meal_item_card_big.xml
@@ -5,7 +5,8 @@
                                  android:layout_height="wrap_content"
                                  app:rv_zoom="true"
                                  app:rv_color="@null"
-                                 android:background="@null">
+                                 android:background="@null"
+                                 android:id="@+id/mealBigRipple">
 
 
   <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
