--- a/app/src/main/res/layout/meal_item_card_small.xml
+++ b/app/src/main/res/layout/meal_item_card_small.xml
@@ -5,7 +5,8 @@
                                  android:layout_height="wrap_content"
                                  android:background="@null"
                                  app:rv_color="@null"
-                                 app:rv_zoom="true">
+                                 app:rv_zoom="true"
+                                 android:id="@+id/mealSmallRipple">
 
 
   <android.support.v7.widget.CardView
